--- a/digital.html
+++ b/digital.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Relógio</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="/styles/digStyle.css">
   <link rel="stylesheet" href="styles/menuStyle.css">
   <script defer src="./JS/relogio.js"></script>
 </head>
@@ -22,11 +23,23 @@
         <li><a href="#">Contador Regressivo</a></li>
       </ul>
     </div>
-  </header>
-  
-  <main>
+    
 
+  </header>
+  <main>
+    <div id="dig-container">
+      <div id="hour" class="dig-time">
+      
+      </div>
+      <div id="min" class="dig-time">
+        30
+      </div>
+      <div id="sec" class="dig-time">
+        52
+      </div>
+    </div>
   </main>
+
 
 
   <footer>
